--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,7 +2,7 @@
 
 <link rel="stylesheet" href="/styles/layout.css">
 <h1>About Me</h1>
-<img class="profile" src="images/mine.png" alt="cat profile">
+<img class="profile" src="images/mine.png" alt="My profile">
 
 <div class="about-section">
   <p>
